--- a/my-app/src/components/card/card.module.scss
+++ b/my-app/src/components/card/card.module.scss
@@ -10,7 +10,7 @@
 .card{
     width: 60vw;
     background-color: rgb(255, 252, 252);
-    // margin-top: 20px;
+    margin-top: 20px;
     // margin-left: 5px;
     // margin-bottom: 20px;
     position: relative;
