--- a/my-app/src/components/header/header.module.scss
+++ b/my-app/src/components/header/header.module.scss
@@ -38,6 +38,7 @@
     &__logo {
         color: #ffffff;
         display: flex;
+        margin-left: 100px;
         justify-content: center; // Centers the text horizontally
         align-items: center; // Centers the text vertically
         text-align: center;
