--- a/my-app/src/components/BreadCrumbs/BreadCrumbs.module.scss
+++ b/my-app/src/components/BreadCrumbs/BreadCrumbs.module.scss
@@ -11,10 +11,8 @@
         }
 
         &-last {
-            background-color: rgb(0, 102, 255);
-            color: #fff;
-            padding: 5px;
-            border-radius: 10px;
+            text-decoration: none;
+            color:rgb(0, 102, 255);
         }
 
         &-icon {
