--- a/my-app/src/pages/SelectedRespPage/SelectedApplicationPage.module.scss
+++ b/my-app/src/pages/SelectedRespPage/SelectedApplicationPage.module.scss
@@ -16,5 +16,55 @@
     &-table {
         margin: 0 auto;
         margin-top: 30px;
+        justify-content: center;
+    }
+
+    &-info {
+        margin: 0 auto;
+        margin-top: 50px;
+        width: 70%;
+        
+        &-title {
+            // display: inline-block;
+            // background-color: #3D348B;
+            border-radius: 10px 10px 0 0;
+            // padding: 10px 25px;
+            margin-bottom: 15px;
+            font-size: 18px;
+            // color: #fff;
+        }
+
+        &-btns {
+            display: flex;
+            gap: 20px;
+            margin-top: 20px;
+            justify-content: center;
+        }
+
+        &-btn {
+            width: 130px;
+            height: 50px;
+            background-color: #2787F5;
+        }
+        &-wrapper {
+            padding-top: 90px;
+            max-width: 1240px;
+            margin: 0 auto;
+        }
+    
+        &-title {
+            font-size: 30px;
+            margin-bottom: 5px;
+            text-align: center;
+        }
+    
+        &-subtitle {
+            font-size: 18px;
+            max-width: 60%;
+            text-align: center;
+            margin: 0 auto;
+            color: gray;
+            margin-bottom: 50px;
+        }
     }
 }
