added basket edits

--- a/my-app/src/pages/LoginPage/LoginPage.module.scss
+++ b/my-app/src/pages/LoginPage/LoginPage.module.scss
@@ -31,6 +31,8 @@
 
     &__item {
         margin-bottom: 15px;
+        margin-left: -200px;
+        width: 415px;
 
         &-error {
             color: red;
